@@ -8,6 +8,7 @@ using namespace std;
 using namespace yarp;
 using namespace yarp::sig;
 using namespace yarp::math;
+using namespace ctrl;
 using namespace iKin;
 
 
