@@ -9,6 +9,7 @@
 using namespace yarp;
 using namespace yarp::sig;
 using namespace yarp::math;
+using namespace ctrl;
 using namespace iKin;
 using namespace Ipopt;
 
