@@ -24,6 +24,7 @@ using namespace yarp::os;
 using namespace yarp::sig;
 using namespace yarp::dev;
 using namespace yarp::math;
+using namespace ctrl;
 using namespace iKin;
 
 
