@@ -1,4 +1,7 @@
 
+2009-11-11 Ugo Pattacini <ugo.pattacini@iit.it>
+	   * all headers: namespace rearranged
+
 2009-11-07 Ugo Pattacini <ugo.pattacini@iit.it>
 	   * iKinSlv.cpp, iKinSlv.h: DOF handling bug fix
 
